# Lista

./: .gitignore  CMakeLists.txt  Makefile
headers/: lista.hpp  macierz.hpp  main.hpp
src/: lista.cpp  macierz.cpp  main.cpp
